fix:When the icon is clicked, the menu   slide down from behind the Hinomaru text

--- a/core/static/css/navbar.css
+++ b/core/static/css/navbar.css
@@ -11,6 +11,12 @@
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
   opacity: 0;
   pointer-events: none;
+  z-index:999;
+
+}
+
+#hino-text-icon-group{
+  z-index: 1000;
 }
 
 #mobile-menu.menu-animate {
@@ -143,3 +149,5 @@
 #hamburger span:nth-child(3) {
   opacity: 1;
 }
+
+
